--- a/lkc.html
+++ b/lkc.html
@@ -92,15 +92,16 @@ body {
 </head>
 <body>
   <div class="navbar">
-    <a href="#Page">HomePage</a>
-    <a href="#Education">Education</a>
-    <a href="#Publications">Publications</a>
-    <a href="#Certificate">Certificate</a>
-    <a href="#Projects">Projects</a>
-    <a href="#Experience">Experience</a>
-    <a href="#Activity">Extracurricular Activity</a>
-    <a href="#Copyrights">Copyrights</a>
-    <a href="#Honors">Honors and Awards</a>
+    <a href="#Page">首页</a>
+    <a href="#Education">教育经历</a>
+    <a href="#Publications">出版物</a>
+    <a href="#Certificate">证书</a>
+    <a href="#Projects">文章</a>
+    <a href="#Experience">工作经历</a>
+    <a href="#Activity">项目经历</a>
+    <a href="#School Experience">校园经历</a>
+    <a href="#Copyrights">著作权</a>
+    <a href="#Honors">奖项和荣誉</a>
   <div class="sidebar">
     <div class="profile-image"></div>
     <div class="name">KeChen Li</div>
@@ -111,7 +112,7 @@ body {
     </div>
   </div>
   <div class="content">
-    <h1>🎓教育经历</h1>
+    <h1 id="Education">🎓教育经历</h1>
     ● <b>爱尔兰高威大学</b>
     <br/><i>09/2025 - 07/2026</i><br/>
     计算机科学与技术 <br/>
@@ -132,19 +133,19 @@ body {
     计算机应用与技术  
     核心课程：Java编程，C编程，动态网页设计，数据库应用开发<br/>
 
-    <h1>⭐出版物</h1>
+    <h1 id="Publications">⭐出版物</h1>
     ●&ensp;(2023). 《汽车行业数智化营销及运营模式研究》上海商业 ISSN1007-2845 中国知网 收录检索。 
     <br/>●&ensp;(2023). 《Deciphering Modern Customer Loyalty： A Machine Learning Approach》 第三届物联网与机器学习国际学术会议（IoTML 2023）EI Compendex，Scopus收录检索。 Doi：10.1117/12.3016467.
     </font></p>
 
-    <h1>📚证书</h1>
+    <h1 id="Certificate">📚证书</h1>
     ●<i>02/2023</i>&ensp;高级-注册数据分析师（中国金融分析协会） 
     <br/>●<i>11/2022</i>&ensp;中级-软件设计师（人力资源和社会保障部） 
     <br/>●<i>12/2022</i>&ensp;工业互联网平台开发工程师中级（工业和信息化部人才交流中心）
     <br/>●<i>03/2019</i>&ensp;全国计算机等级考试一级（Office）
     <br/>●<i>03/2023</i>&ensp;全国计算机等级考试二级（C语言） 
 
-    <h1>🌎文章</h1>
+    <h1 id="Projects">🌎文章</h1>
     <p> <font size = "4.5">
     <b>●&ensp;“基于XGBoost的北京移动用户体验影响因素研究”</b> 
     <br/>这项研究专注于调查影响北京移动用户体验的因素。通过使用皮尔逊相关系数分析，该研究检查了影响用户满意度和评级的各种因素，为决策提供了基础。此外，基于相关影响因素开发了一个XGBoost预测模型，以准确预测客户评级。
@@ -163,7 +164,7 @@ body {
     <br/>关键词：自回归集成移动平均模型（AIRMA）；BP神经网络；库存管理；需求预测；生产调度。
     <br/>成就：2022年全国大学生数学建模竞赛江苏区域二等奖。
 
-    <h1>📌工作经历   </h1>
+    <h1 id="Experience">📌工作经历   </h1>
     <p> <font size = "4.5">
     <b>江苏霖承科技有限公司(南通市软件协会成员)</b>
     <br/><i>10/2021–至今</i>
@@ -203,7 +204,7 @@ body {
     <br/>●&ensp;实现了用户特定的文本注释功能，允许用户为分配的文本进行注释，以便进行后续的自然语言处理任务。
     <br/>
     <br/>
-    <h1>💻项目经历   </h1>
+    <h1 id="Activity">💻项目经历   </h1>
     <p> <font siz
     </b>
     <br/>基于主成分分析和最邻近节点算法的中药材分类问题
@@ -225,7 +226,7 @@ body {
     <br/>●&ensp;职责: 进行市场调研和竞争对手分析，确定目标用户。使用矢量数据库实现知识库数据的高效存储、检索和匹配。利用 GPT 模型进行快速全文搜索和精确的结果匹配。使用 Django 开发安全后端，使用 Vue.js 开发视觉上吸引人的前端。与 LangChain的 API和其他技术集成，以增强数据处理。利用 LangChain 和GPT模型，通过智能回复改善用户体验。
 
 
-    <h1>📜校园经历  </h1>
+    <h1 id="School Experience">📜校园经历  </h1>
     <font size = "4.5">
     <b>南通师范高等专科学校</b> 
     <br/>●&ensp;科技创新社团 创始人、社长、团支书 (<i>01/2021-07/2023)</i>:组织和管理社团，社团以学科竞赛为导向，如数学建模、创新创业和算法竞赛。取得了优异的成绩，受众人数达数百人，教学和指导各种比赛的参与者，促进他们的成长和成功。被评为五星社团和活力社团。
@@ -235,7 +236,7 @@ body {
     <br/>●&ensp;数学建模协会 学术部部长(10/2023 – 至今)：·	组织和开展各种讲座和课程。提高学生的数学建模能力和学术素养。通过邀请专家学者、优秀参赛者等来分享他们的经验和见解，让学生们能够更深入地了解数学建模的原理和应用。·	参与学生竞赛的组织工作。组织了各种级别的数学建模比赛，如美赛、国赛等。带领团队成员为学生们提供系统的培训和指导，帮助他们更好地掌握数学建模的知识和技能。成功地组织了一系列高质量的讲座和比赛，并获评五星社团。
 
 
-    <h1>📝著作权  </h1>
+    <h1 id="Copyrights">📝著作权  </h1>
     <font size = "4.5">
     ●&ensp;《基于数据挖掘与用户画像的智能职业规划系统》(2022SR1346851).           11/2022
     <br/>●&ensp;《基于人工智能的人才匹配系统》 (2022SR1570163).           08/2022
@@ -243,7 +244,7 @@ body {
     <br/>●&ensp;《基于Django和Vue前后端分离的教学协作平台V1.0》(2021SR1494741).        08/2023
     <br/>●&ensp;·	《基于LLM（大语言模型）与向量数据库的数智化企业智能助理系统》(2023SR1583655).          08/2023
 
-    <h1>🎖奖项与荣誉</h1>
+    <h1 id="Honors">🎖奖项与荣誉</h1>
     <p> <font size = "4.5">
     ●<i>12/2023</i>&ensp;2023百度搜索创新大赛 搜索答案组织赛道 全国Top10 
     <br/>●<i>12/2023</i>&ensp;2023百度搜索创新大赛 设计一个解决搜索用户需求的AI原生应用赛道  全国冠军 &ensp;&ensp;&ensp;
